Fixed the bug preventing the HP and emojis from displaying properly. Added minor CSS for visibility.

--- a/styles/home.css
+++ b/styles/home.css
@@ -8,7 +8,7 @@
     border-radius: 9px
 }
 
-.goblins-list-section {
+/*.goblins-list-section {
     display: flex;
     flex-direction: column;
     float: right;
@@ -16,7 +16,7 @@
     margin: 15px 20px 0px 20px;
     border: 2px;
     border-radius: 9px;
-}
+}*/
 
 
 html {
@@ -25,9 +25,13 @@ max-width: 100%;
 max-height: 100%;
 }
 
-#goblin {
-    background-color: green;
+#goblins {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(83, 145, 83);
     border: 3px solid;
     border-color: black;
     margin-top: 10px;
+    float: right;
+
 }
