--- a/styles/style.css
+++ b/styles/style.css
@@ -89,3 +89,7 @@ footer {
     background-color: var(--color3);
     box-shadow: var(--shadow);
 }
+*/
+#goblins {
+    background-color: green
+}
